--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "version": 2,
-  "builds": [{ "src": "main.go", "use": "@vercel/go" }],
-  "routes": [{ "src": "/download", "dest": "/main" }]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "main.go",
+        "use": "@vercel/go"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/.*",
+        "dest": "main.go"
+      }
+    ]
+  }
+  
